tests/neg/indentRight.scala
object Test {

  if (true)
    println("hi")
  }

  println("!")  // error: expected a toplevel definition
}
